@@ -1,0 +1,17 @@
+[Settings]
+gtk-theme-name=Colloid-Purple-Dark-Dracula
+gtk-icon-theme-name=breeze-dark
+gtk-font-name=Adwaita Sans 11
+gtk-cursor-theme-name=Qogir-Dark
+gtk-cursor-theme-size=25
+gtk-toolbar-style=GTK_TOOLBAR_ICONS
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-button-images=1
+gtk-menu-images=1
+gtk-enable-event-sounds=0
+gtk-enable-input-feedback-sounds=0
+gtk-xft-antialias=1
+gtk-xft-hinting=1
+gtk-xft-hintstyle=hintslight
+gtk-xft-rgba=rgb
+gtk-application-prefer-dark-theme=1
