@@ -1,0 +1,7 @@
+[Settings]
+gtk-theme-name=Colloid-Purple-Dark-Dracula
+gtk-icon-theme-name=breeze-dark
+gtk-font-name=Adwaita Sans 11
+gtk-cursor-theme-name=Qogir-Dark
+gtk-cursor-theme-size=25
+gtk-application-prefer-dark-theme=1
