@@ -1,0 +1,2 @@
+[General]
+theme=KvAdaptaDark
