@@ -1,0 +1,35 @@
+[Appearance]
+color_scheme_path=/home/xgui4/.config/qt5ct/colors/CatppuccinMocha.colors
+custom_palette=true
+icon_theme=breeze-dark
+standard_dialogs=xdgdesktopportal
+style=Breeze
+
+[Fonts]
+fixed="Adwaita Sans,12,-1,5,50,0,0,0,0,0,Regular"
+general="Adwaita Sans,12,-1,5,50,0,0,0,0,0,Regular"
+
+[Interface]
+activate_item_on_single_click=0
+buttonbox_layout=2
+cursor_flash_time=1000
+dialog_buttons_have_icons=1
+double_click_interval=400
+gui_effects=@Invalid()
+keyboard_scheme=2
+menus_have_icons=true
+show_shortcuts_in_context_menus=true
+stylesheets=@Invalid()
+toolbutton_style=4
+underline_shortcut=2
+wheel_scroll_lines=3
+
+[PaletteEditor]
+geometry="@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x83\0\0\x1=\0\0\x4\xfd\0\0\x3i\0\0\x2\x85\0\0\x1W\0\0\x4\xfb\0\0\x3g\0\0\0\0\0\0\0\0\a\x80\0\0\x2\x85\0\0\x1W\0\0\x4\xfb\0\0\x3g)"
+
+[SettingsWindow]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\a\0\0\0\x46\0\0\ax\0\0\x4\x30\0\0\0\a\0\0\0\x46\0\0\ax\0\0\x4\x30\0\0\0\0\0\0\0\0\a\x80\0\0\0\a\0\0\0\x46\0\0\ax\0\0\x4\x30)
+
+[Troubleshooting]
+force_raster_widgets=1
+ignored_applications=@Invalid()
