@@ -1,0 +1,9 @@
+Net/ThemeName "Colloid-Purple-Dark-Dracula"
+Net/IconThemeName "breeze-dark"
+Gtk/CursorThemeName "Qogir-Dark"
+Net/EnableEventSounds 0
+EnableInputFeedbackSounds 0
+Xft/Antialias 1
+Xft/Hinting 1
+Xft/HintStyle "hintslight"
+Xft/RGBA "rgb"
